UI bugs on mobile Fixes #22

--- a/src/app/modules/reports/components/reports/reports.component.sass
+++ b/src/app/modules/reports/components/reports/reports.component.sass
@@ -15,3 +15,4 @@
     @include font-size('medium')
     cursor: pointer
     text-decoration: none
+    text-align: center
