--- a/src/app/pages/about-us/request/request.page.sass
+++ b/src/app/pages/about-us/request/request.page.sass
@@ -1,2 +1,5 @@
 .left-margin
-  margin-left: 80px
+    margin-left: 80px
+
+.mobile .left-margin
+    margin-left: 0
